--- a/ex22.html
+++ b/ex22.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade 25</title>
+    <title>Atividade 22</title>
+    <link rel="icon" href="imagem/icone.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="imagem/icone.jpg" type="image/x-icon">
 </head>
 <body>
-    <h3>Status da bateria</h3>
-    <progress value="32" max="100"></progress>
-    <p style="color: red;">A bateria está acabando!</p>
+    
 </body>
 </html>
