--- a/ex27.html
+++ b/ex27.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade 25</title>
+    <title>Atividade 27</title>
 </head>
+<style>
+    body{
+        background-color: rgb(81, 81, 238);
+    }
+    h1{
+        color: white;
+    }
+</style>
 <body>
-    <h3>Status da bateria</h3>
-    <progress value="32" max="100"></progress>
-    <p style="color: red;">A bateria está acabando!</p>
+    <h1>CSS interno</h1>
 </body>
 </html>
