--- a/ex23.html
+++ b/ex23.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade 23</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="./css/23.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="ex23.html">inicio</a></li>
+            <li><a href="./ex23.html">inicio</a></li>
             <li><a href=""></a>masculino</li>
             <li><a href=""></a>feminino</li>
             <li><a href=""></a>infantil</li>
