--- a/ex28.html
+++ b/ex28.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade 25</title>
+    <title>Atividade 28</title>
+    <link rel="stylesheet" href="./css/28.css">
 </head>
 <body>
-    <h3>Status da bateria</h3>
-    <progress value="32" max="100"></progress>
-    <p style="color: red;">A bateria está acabando!</p>
+    <h1>CSS externo</h1>
+    <div id="minha-div">
+        <p>Meu parágrafo</p>
+    </div>
 </body>
 </html>
