--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testes</title>
+    <title>Atividades</title>
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body>
     <h1>Atividades</h1>
     <header>
         <nav>
+            <a href="ex19.html" target="_blank">Atividade 19</a>
+            <a href="ex20.html" target="_blank">Atividade 20</a>
+            <a href="ex21.html" target="_blank">Atividade 21</a>
             <a href="ex22.html" target="_blank">Atividade 22</a>
             <a href="ex23.html" target="_blank">Atividade 23</a>
             <a href="ex24.html" target="_blank">Atividade 24</a>
