--- a/ex21.html
+++ b/ex21.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade 21</title>
+    <link rel="stylesheet" href="./css/21.css">
 </head>
 <body>
     <h1>Midias</h1>
@@ -14,7 +15,7 @@
     <br><br>
 
     <h5>Imagem da Internet</h5>
-    <img src="https://static-cse.canva.com/blob/759754/IMAGE1.jpg" width="300px" alt="flor vermelha">
+    <img src="https://static-cse.canva.com/blob/759754/IMAGE1.jpg" alt="flor vermelha">
 
     <br><br>
 
